<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.biscuit.ui.fragments.EnterCodeFragment">

    <ImageView
        android:id="@+id/register_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_large_margin"
        android:contentDescription="@string/c_register_imageview"
        android:src="@drawable/register_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text_enter_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="@dimen/vertical_margin"
        android:text="@string/register_text_enter_coe"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_imageView" />

    <TextView
        android:id="@+id/register_text_we_send"
        style="@style/small_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/vertical_margin"
        android:text="@string/register_text_we_send"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_enter_code" />

    <EditText
        android:id="@+id/register_input_code"
        style="@style/edit_text"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:inputType="number"
        android:maxLength="6"
        android:textColorHint="@color/gray"
        android:hint="@string/register_default_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_text_we_send" />

</androidx.constraintlayout.widget.ConstraintLayout>